2023-04-03  Matteo Corti  <matteo@corti.li>

        * test/integration_tests.sh (testWrongHostIgnore): Ignore expiration on wrong.host.badssl.com

2023-03-16  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert: unset TIMEOUT_REASON after the the context it should be used
        * check_ssl_cert: added some more TIMEOUT_REASON messages

2023-03-09  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (main): Fixed the RSA algorithms

2023-03-06  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert: removed hard coded 'grep' invocations

2023-02-26  Matteo Corti  <matteo@corti.li>

        * test/unit_tests.sh (testRequireOCSP): Fixed the test (videolan.org certificate was not OK)

2023-02-15  Matteo Corti  <matteo@corti.li>

        * test/unit_tests.sh: Two new tests for wrong hostname

        * check_ssl_cert (main): Fixes --ignore-host-cn behaviour with --match

2023-01-27  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (main): System info debugging right at the beginning

2023-01-16  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert: Added an option to set the security level (see help)
        * check_ssl_cert (fetch_certificate): better error handling

2023-01-05  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (usage): Added an option to ignore header problems with --all and --all-local

2022-11-30  Marcel Burkhalter <marcel.burkhalter@weareplanet.com>

        * check_ssl_cert (main): Add command line argument to set the PATH variable

2022-11-30  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (check_ocsp): ignoring OCSP errors if specified from the command line

2022-10-24  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (get_tds_certificate): Adding the timeout check on the TDS checks

2022-10-18  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (main): Print the $PATH in debug mode

2022-10-06  Matteo Corti  <matteo@corti.li>
