@@ -1,3 +1,7 @@
+2023-04-05  Matteo Corti  <matteo@corti.li>
+
+        * check_ssl_cert (main): Better (earlier) check for non-existing hosts
+
 2023-04-03  Matteo Corti  <matteo@corti.li>
 
         * test/integration_tests.sh (testWrongHostIgnore): Ignore expiration on wrong.host.badssl.com
